@@ -17,24 +17,29 @@ plugins {
     id("kotlin-android")
     id 'firebase-vendor'
     id 'com.google.protobuf'
+    id("copy-google-services")
 }
 
 firebaseLibrary {
-    libraryGroup "ml-modeldownloader"
+    libraryGroup = "ml-modeldownloader"
     testLab.enabled = true
     publishJavadoc = true
+    releaseNotes {
+        name.set("{{firebase_ml}}")
+        versionName.set("firebaseml-modeldownloader")
+    }
 }
 
 protobuf {
     // Configure the protoc executable
     protoc {
         // Download from repositories
-        artifact = "com.google.protobuf:protoc:$protocVersion"
+        artifact = libs.protoc.get().toString()
     }
     generateProtoTasks {
         all().each { task ->
             task.builtins {
-                java { }
+                java {}
             }
         }
     }
@@ -42,10 +47,10 @@ protobuf {
 
 android {
     namespace "com.google.firebase.ml.modeldownloader"
-    compileSdkVersion project.targetSdkVersion
+    compileSdkVersion project.compileSdkVersion
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
         multiDexEnabled true
         versionName version
@@ -55,9 +60,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions { jvmTarget = "1.8" }
     testOptions {
         unitTests {
             includeAndroidResources = true
+        }
+
+        unitTests.all {
+            jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
         }
     }
     lint {
@@ -70,60 +80,59 @@ thirdPartyLicenses {
 }
 
 dependencies {
-    androidTestImplementation "androidx.annotation:annotation:1.1.0"
-    androidTestImplementation "androidx.test.ext:junit:$androidxTestJUnitVersion"
-    androidTestImplementation "com.google.truth:truth:$googleTruthVersion"
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'junit:junit:4.13.1'
-    annotationProcessor "com.google.auto.value:auto-value:1.6.5"
-    annotationProcessor libs.dagger.compiler
-    annotationProcessor project(":encoders:firebase-encoders-processor")
-    compileOnly "com.google.auto.value:auto-value-annotations:1.6.6"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'com.google.android.datatransport:transport-api:3.0.0'
-    implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
-    implementation 'com.google.android.gms:play-services-tasks:18.0.1'
-    implementation 'com.google.auto.service:auto-service-annotations:1.0.1'
-    implementation 'com.google.firebase:firebase-annotations:16.2.0'
-    implementation 'com.google.firebase:firebase-encoders-json:18.0.0'
-    implementation 'com.google.firebase:firebase-encoders:17.0.0'
-    implementation 'com.google.firebase:firebase-installations-interop:17.1.0'
-    implementation 'javax.inject:javax.inject:1'
-    implementation('com.google.firebase:firebase-datatransport:18.2.0'){
+    javadocClasspath libs.findbugs.jsr305
+
+    vendor (libs.dagger.dagger) {
+         exclude group: "javax.inject", module: "javax.inject"
+     }
+
+    api 'com.google.android.gms:play-services-tasks:18.0.1'
+    api 'com.google.firebase:firebase-annotations:16.2.0'
+    api("com.google.firebase:firebase-common:21.0.0")
+    api("com.google.firebase:firebase-common-ktx:21.0.0")
+    api("com.google.firebase:firebase-components:18.0.0")
+    api('com.google.firebase:firebase-datatransport:18.2.0'){
          exclude group: 'com.google.firebase', module: 'firebase-common'
          exclude group: 'com.google.firebase', module: 'firebase-components'
      }
-    implementation("com.google.firebase:firebase-common:20.4.2")
-    implementation("com.google.firebase:firebase-common-ktx:20.4.2")
-    implementation("com.google.firebase:firebase-components:17.1.3")
-    implementation("com.google.firebase:firebase-installations:17.2.0")
-    javadocClasspath 'com.google.code.findbugs:jsr305:3.0.2'
-    testImplementation "androidx.test.ext:junit:$androidxTestJUnitVersion"
-    testImplementation "androidx.test:core:$androidxTestCoreVersion"
-    testImplementation "com.google.protobuf:protobuf-java-util:$protobufJavaUtilVersion"
-    testImplementation "com.google.truth:truth:$googleTruthVersion"
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
-    testImplementation 'androidx.test:runner:1.5.1'
-    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.26.3'
-    testImplementation 'com.google.truth.extensions:truth-proto-extension:1.0'
-    testImplementation 'junit:junit:4.13-beta-2'
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    testImplementation 'org.mockito:mockito-core:3.3.3'
-    testImplementation 'org.mockito:mockito-core:3.6.0'
+    api 'com.google.firebase:firebase-encoders:17.0.0'
+    api 'com.google.firebase:firebase-encoders-json:18.0.0'
+    api("com.google.firebase:firebase-installations:17.2.0")
+    api 'com.google.firebase:firebase-installations-interop:17.1.0'
+
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.google.android.datatransport:transport-api:3.0.0'
+    implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
+    implementation 'com.google.auto.service:auto-service-annotations:1.0.1'
+    implementation libs.javax.inject
+    implementation libs.kotlin.stdlib
+
+    compileOnly "com.google.auto.value:auto-value-annotations:1.6.6"
+
+    annotationProcessor project(":encoders:firebase-encoders-processor")
+    annotationProcessor "com.google.auto.value:auto-value:1.6.5"
+    annotationProcessor libs.dagger.compiler
+
     testImplementation(project(":integ-testing")) {
         exclude group: 'com.google.firebase', module: 'firebase-common'
         exclude group: 'com.google.firebase', module: 'firebase-components'
     }
-    vendor (libs.dagger.dagger) {
-         exclude group: "javax.inject", module: "javax.inject"
-     }
-}
+    testImplementation libs.androidx.test.core
+    testImplementation 'androidx.test:runner:1.5.1'
+    testImplementation libs.androidx.test.junit
+    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.26.3'
+    testImplementation libs.protobuf.java.util
+    testImplementation libs.truth
+    testImplementation 'com.google.truth.extensions:truth-proto-extension:1.0'
+    testImplementation 'junit:junit:4.13-beta-2'
+    testImplementation libs.junit
+    testImplementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    testImplementation libs.mockito.core
+    testImplementation libs.robolectric
 
-// ==========================================================================
-// Copy from here down if you want to use the google-services plugin in your
-// androidTest integration tests.
-// ==========================================================================
-ext.packageName = "com.google.firebase.ml.modeldownloader"
-apply from: '../gradle/googleServices.gradle'
+    androidTestImplementation "androidx.annotation:annotation:1.1.0"
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation libs.androidx.test.junit
+    androidTestImplementation libs.truth
+    androidTestImplementation 'junit:junit:4.13.1'
+}
